<resources>
    <!-- Telas -->
    <string name="splash_delay">2000</string>
    <string name="app_name">Reise Common</string>
    <string name="comp_perfil_infor_pessoais">Informações Pessoais</string>
    <string name="default_web_client_id">144088907975-g0q7l5hj8u6k0p8h5mjvqi73ef4cmp21.apps.googleusercontent.com</string>
    <string name="facebook_app_id">819312438244188</string>

    <!-- Dados pessoais -->
    <string name="nome">Nome</string>
    <string name="endereco">Endereço</string>
    <string name="celular">Celular</string>
    <string name="telefone">Telefone</string>
    <string name="descricao">Descrição (Opicional)</string>

    <!-- Validação -->
    <string name="campo_obrigatorio">Campo obrigatório!</string>

    <!--  -->
    <string name="or">ou</string>
    <string name="signin_facebook">Signin with Facebook</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Drawer Menu -->
    <string name="opcoes">Opções</string>
    <string name="principal">Principal</string>
    <string name="perfil">Perfil</string>
    <string name="viagem">Viagem</string>
    <string name="sair">Sair</string>
    <string name="notificacoes">Notificações</string>
    <string name="configuracoes">Configurações</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
</resources>
