<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_principal"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/principal" />

        <item
            android:id="@+id/nav_viagem"
            android:icon="@drawable/ic_menu_location"
            android:title="@string/viagem" />

    </group>

    <item android:title="@string/opcoes">

        <menu>
            <item
                android:id="@+id/nav_notificacoes"
                android:icon="@drawable/ic_menu_notifications"
                android:title="@string/notificacoes" />

            <item
                android:id="@+id/nav_configuracoes"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/configuracoes" />

            <item
                android:id="@+id/nav_sair"
                android:icon="@drawable/ic_menu_exit"
                android:title="@string/sair" />
        </menu>

    </item>

</menu>
